Fixed layout stretch when display mode is block

--- a/source/about/css/qr.css
+++ b/source/about/css/qr.css
@@ -48,3 +48,7 @@
   filter: brightness(1) !important; 
   -webkit-filter: brightness(1) !important;
 }
+
+.qr-box {
+  display: inline-block;
+}
